--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1443,16 +1443,16 @@
                       <div class="row">
                         <label class="btn btn-info btn-sm" translate>claim.uploadPhoto
                           <i class="fa fa-upload"></i>
-                          <input type="file" hidden (change)="onFileChanged($event, 1)">
+                          <input type="file" multiple="" hidden (change)="onFileChange($event, 1)">
                         </label>
 
                         <label class="btn btn-info btn-sm" translate>claim.uploadPlan
                           <i class="fa fa-upload"></i>
-                          <input type="file" hidden (change)="onFileChanged($event, 2)">
+                          <input type="file" multiple="" hidden (change)="onFileChange($event, 2)">
                         </label>
                         <label class="btn btn-info btn-sm" translate>claim.upload3D
                           <i class="fa fa-upload"></i>
-                          <input type="file" hidden (change)="onFileChanged($event, 3)">
+                          <input type="file" multiple="" hidden (change)="onFileChange($event, 3)">
                         </label>
                       </div>
                     </div>
