--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -562,7 +562,7 @@
                                     placeholder="{{ 'claim.city' | translate }}">
                                   </ng-select>
                                 </div>
-                                <div class="col-sm-2 marginleft">
+                                <div class="col-sm-2 float-left">
                                   <a (click)="openModal(template,'City');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
                                 </div>
                               </div>
