--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -558,58 +558,58 @@
                                util.hasShowRealPropertyGroup('VIEW_PURCHASE_OBJECT_INFO', roles) &&
                                util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles) &&
                                util.hasShowRealPropertyGroup('UPDATE_PURCHASE_OBJECT_INFO', roles)">
-<!--                            <div class="col-sm">-->
-<!--                              <label for="patronymic" translate>Город-->
-<!--                                <span class="text-danger" *ngIf="!applicationForm.cityId">&nbsp;*</span>-->
-<!--                              </label>-->
-<!--                              <div class="row">-->
-<!--                                <div class="col-sm-10">-->
-<!--                                  <ng-select-->
-<!--                                    [class.disabled]="util.hasShowRealPropertyGroup('UPDATE_PURCHASE_OBJECT_INFO', roles) && util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles)"-->
-<!--                                    [items]="city"-->
-<!--                                    [(ngModel)]="applicationForm.cityId"-->
-<!--                                    formControlName="cityId"-->
-<!--                                    [readonly]="true"-->
-<!--                                    bindValue="value"-->
-<!--                                    placeholder="{{ 'claim.city' | translate }}">-->
-<!--                                  </ng-select>-->
-<!--                                </div>-->
-<!--                                <div class="col-sm-2">-->
-<!--                                  <a (click)="openModal(template,'City');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>-->
-<!--                                </div>-->
-<!--                              </div>-->
+                            <div class="col-sm" *ngIf="isSell()">
+                              <label for="patronymic" translate>Город
+                                <span class="text-danger" *ngIf="!applicationForm.cityId">&nbsp;*</span>
+                              </label>
+                              <div class="row">
+                                <div class="col-sm-10">
+                                  <ng-select
+                                    [class.disabled]="util.hasShowRealPropertyGroup('UPDATE_PURCHASE_OBJECT_INFO', roles) && util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles)"
+                                    [items]="city"
+                                    [(ngModel)]="applicationForm.cityId"
+                                    formControlName="cityId"
+                                    [readonly]="true"
+                                    bindValue="value"
+                                    placeholder="{{ 'claim.city' | translate }}">
+                                  </ng-select>
+                                </div>
+                                <div class="col-sm-2">
+                                  <a (click)="openModal(template,'City');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
+                                </div>
+                              </div>
 
-<!--                              <div *ngIf="f.cityId.touched && f.cityId.invalid" class="text-danger">-->
-<!--                                <div *ngIf="f.cityId.errors.required" translate>claim.requiredField</div>-->
-<!--                              </div>-->
-<!--                            </div>-->
-<!--                            <div class="col-sm"-->
-<!--                                 [hidden]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles) && util.hasShowRealPropertyGroup('VIEW_SALE_OBJECT_INFO', roles)"-->
-<!--                                 *ngIf="isBuy()">-->
-<!--                              <label for="patronymic" translate>claim.street-->
-<!--                                <span class="text-danger" *ngIf="!applicationForm.streetId">&nbsp;*</span>-->
-<!--                              </label>-->
-<!--                              <div class="row">-->
-<!--                                <div class="col-sm-10">-->
-<!--                                  <ng-select-->
-<!--                                    [class.disabled]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles)"-->
-<!--                                    bindValue="value"-->
-<!--                                    [items]="streets"-->
-<!--                                    [(ngModel)]="applicationForm.streetId"-->
-<!--                                    formControlName="streetId"-->
-<!--                                    [readonly]="true"-->
-<!--                                    placeholder="{{ 'claim.street' | translate }}">-->
-<!--                                  </ng-select>-->
-<!--                                </div>-->
-<!--                                <div class="col-sm-2">-->
-<!--                                  <a (click)="openModal(template,'Street');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>-->
-<!--                                </div>-->
-<!--                              </div>-->
+                              <div *ngIf="f.cityId.touched && f.cityId.invalid" class="text-danger">
+                                <div *ngIf="f.cityId.errors.required" translate>claim.requiredField</div>
+                              </div>
+                            </div>
+                            <div class="col-sm"
+                                 [hidden]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles) && util.hasShowRealPropertyGroup('VIEW_SALE_OBJECT_INFO', roles)"
+                                 *ngIf="isSell()">
+                              <label for="patronymic" translate>claim.street
+                                <span class="text-danger" *ngIf="!applicationForm.streetId">&nbsp;*</span>
+                              </label>
+                              <div class="row">
+                                <div class="col-sm-10">
+                                  <ng-select
+                                    [class.disabled]="util.hasShowRealPropertyGroup('UPDATE_SALE_OBJECT_INFO', roles)"
+                                    bindValue="value"
+                                    [items]="streets"
+                                    [(ngModel)]="applicationForm.streetId"
+                                    formControlName="streetId"
+                                    [readonly]="true"
+                                    placeholder="{{ 'claim.street' | translate }}">
+                                  </ng-select>
+                                </div>
+                                <div class="col-sm-2">
+                                  <a (click)="openModal(template,'Street');"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
+                                </div>
+                              </div>
 
-<!--                              <div *ngIf="f.streetId.touched && f.streetId.invalid" class="text-danger">-->
-<!--                                <div *ngIf="f.streetId.errors.required" translate>claim.requiredField</div>-->
-<!--                              </div>-->
-<!--                            </div>-->
+                              <div *ngIf="f.streetId.touched && f.streetId.invalid" class="text-danger">
+                                <div *ngIf="f.streetId.errors.required" translate>claim.requiredField</div>
+                              </div>
+                            </div>
 
                           </div>
                           <div class="row">
