--- a/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
+++ b/frontend/src/app/components/profile/my-clients/client-card/client-card.component.html
@@ -28,7 +28,7 @@
               <div class="col-sm-10">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Телефон" id="inputEmail3MD" [disabled]="true"
-                         [(ngModel)]="formClient.phoneNumber" prefix="+" mask="0(000) 000 00 00">
+                         [(ngModel)]="formClient.phoneNumber"  prefix="+7" mask="(000) 000 00 00" [showMaskTyped]="true" >
                   <div class="input-group-append">
                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-whatsapp text-success"></i></span>
                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-telegram text-primary"></i></span>
@@ -58,6 +58,19 @@
               </div>
             </div>
           </div>
+          <div class="col-sm-5" >
+            <br>
+            <br>
+            <div class="form-group row" *ngFor="let obj of formClient.clientPhoneNumbersDtoList">
+              <label for="inputEmail3MD" class="col-sm-3 col-form-label">Доп телефон</label>
+              <div class="col-sm-8">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Телефон" id="addPhone" [disabled]="true"
+                         [(ngModel)]="obj.phoneNumber" prefix="+7" mask="(000) 000 00 00" [showMaskTyped]="true" >
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="col-sm" style="text-align: right">
             <a (click)="openModal(template)"><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
           </div>
@@ -71,7 +84,6 @@
             <tr>
               <th>ID заявки</th>
               <th>Операция</th>
-              <th translate>claim.crDateFrom</th>
               <th translate>fio</th>
               <th translate>phone</th>
               <th translate>e-mail</th>
@@ -79,18 +91,16 @@
               <th translate>Количество комнат</th>
               <th translate>Цена</th>
               <th translate>Вид расчета</th>
-              <th translate>Прошадь</th>
-              <th translate>Этаж</th>
+              <th translate>Площадь</th>
               <th translate>Статус</th>
-              <th translate>Комментарий</th>
             </tr>
             </thead>
             <tbody style="cursor: pointer">
             <tr *ngFor="let claim of claimData;let i = index">
-              <td>{{claim.id}}
+              <td>
+                <a [routerLink]="['/create-claim/', claim?.id]">{{claim.id}}</a>
               </td>
               <td>{{getDicNameByLanguage(claim, 'operationType')}}</td>
-              <td>{{formatDate(claim)}}</td>
               <td>{{claim.fullname}}</td>
               <td><span>{{claim.phone | mask: '+0 (000) 000-0000'}}</span></td>
               <td>{{claim.email}}</td>
@@ -99,9 +109,7 @@
               <td>{{claim.price}}</td>
               <td></td>
               <td>{{claim.totalArea}}</td>
-              <td>{{claim.floor}}</td>
               <td>{{getDicNameByLanguage(claim, 'status')}}</td>
-              <td>{{claim.comment}}</td>
             </tr>
             </tbody>
           </table>
@@ -179,7 +187,7 @@
               </div>
               <div *ngFor="let item of formClient.clientPhoneNumbersDtoList;let index = index">
                 <label class="col-sm col-form-label">Доп телефон<span class="text-danger">&nbsp;*</span></label>
-                <div class="row" style="margin-left: 1px"> <input type="text" class="col-sm form-control" [(ngModel)]="item.phoneNumber" prefix="+7" mask="(000) 000 00 00" [disabled]="!rgRoles">
+                <div class="row" style="margin-left: 1px"> <input type="text" class="col-sm form-control" [(ngModel)]="item.phoneNumber" prefix="+7" mask="(000) 000 00 00" [showMaskTyped]="true" [disabled]="!rgRoles">
                   <a  style="margin-left: 10px" (click)="clearPhone(item)"><i style="color:red"
                                                                               class="fa fa-times-circle fa-2x"></i></a></div>
 
