HTC-341 HTC-343 HTC-345 HTC-347

--- a/frontend/src/app/components/profile/my-objects/my-objects.component.html
+++ b/frontend/src/app/components/profile/my-objects/my-objects.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-sm">
+    <br/>
     <div class="input-group w-50">
       <input type="text" class="form-control" placeholder="Поиск" id="mail" [(ngModel)]="text">
       <div class="input-group-append">
@@ -33,7 +34,7 @@
         <td>
           {{getCountFoto(object.photos)}}
         </td>
-        <td>{{object.encumbrance}}</td>
+        <td>{{getName(object.encumbrance)}}</td>
         <td>{{object.priceAnalytics}}</td>
         <td>{{object.contactsOfAgent}}</td>
       </tr>
