--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -609,7 +609,7 @@
               <td>{{object.realPropertyId}}</td>
               <td><img *ngIf="getImgUrl(object)" [src]="getImgUrl(object)" alt="First Slide" class="photoList" height="100px"></td>
               <td>{{object.address.nameRu}}</td>
-              <td>{{object.price}}</td>
+              <td>{{object.objectPrice}}</td>
               <td>{{object.numberOfRooms}}</td>
               <td>
                 {{getCountFoto(object.photos)}}
