--- a/frontend/src/app/components/profile/my-objects/my-objects.component.html
+++ b/frontend/src/app/components/profile/my-objects/my-objects.component.html
@@ -29,7 +29,7 @@
         <td><img [src]="getImgUrl(object)" alt="First Slide" class="photoList" width="100"
                  height="100"></td>
         <td>{{object.address.nameRu}}</td>
-        <td>{{object.price}}</td>
+        <td>{{object.objectPrice}}</td>
         <td>{{object.numberOfRooms}}</td>
         <td>
           {{getCountFoto(object.photos)}}
