--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1674,7 +1674,7 @@
     </div>
     <div class="col-sm" *ngIf="resident">
       <label class="col-sm col-form-label">Номер дома (дробь/буква/строение)</label>
-      <input type="text" maxlength="3" class="col-sm form-control" name="houseNumberFraction"
+      <input type="text" disabled="true" maxlength="3" class="col-sm form-control" name="houseNumberFraction"
              [(ngModel)]="formRes.buildingDto.houseNumberFraction">
     </div>
     <div class="col-sm" *ngIf="resident">
