--- a/frontend/src/app/components/dic-control/dic-control.component.html
+++ b/frontend/src/app/components/dic-control/dic-control.component.html
@@ -353,7 +353,7 @@
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Номер дома (дробь/буква/строение)</label>
-            <input type="text" maxlength="3" class="col-sm form-control" name="houseNumberFraction"
+            <input type="text" maxlength="3" disabled="true" class="col-sm form-control" name="houseNumberFraction"
                    [(ngModel)]="formRes.buildingDto.houseNumberFraction">
           </div>
           <div class="col-sm" *ngIf="resident">
