--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -614,7 +614,7 @@
               <td>
                 {{getCountFoto(object.photos)}}
               </td>
-              <td>{{getName(object.encumbrance)}}</td>
+              <td>{{object.encumbrance.nameRu}}</td>
               <td>{{object.priceAnalytics}}</td>
               <td>{{object.contactsOfAgent}}</td>
             </tr>
