--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -10,8 +10,8 @@
       <br/>
       <div class="row">
         <div class="col-sm">
-          <div style="text-align: right">
-            <a *ngIf="save" (click)="removeByGuid(profile?.photoUuid)"><i style="color: red" class="fa fa-times fa-2x"></i></a>
+          <div style="text-align: right"  *ngIf="profile.photoUuid!=null">
+            <a *ngIf="save" (click)="delImage(profile?.photoUuid)"><i style="color: red" class="fa fa-times fa-2x"></i></a>
           </div>
 
           <img [src]="getSrcImg(profile?.photoUuid)" class="avatar img-circle img-thumbnail"
