--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.scss
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.scss
@@ -18,3 +18,9 @@ legend {
   padding: 5px 5px 5px 10px;
   background-color: #ffffff;
 }
+
+textarea, textarea:focus {
+  border: none;
+  outline: none !important;
+  border-bottom: 1px solid black;
+}
