--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -282,8 +282,8 @@
                               bindValue="value"
                               [items]="applicationFlagSort"
                               [(ngModel)]="applicationForm.applicationFlagIdList"
-                              formControlName="possibleReasonForBiddingIdList"
-                              placeholder="{{ 'claim.possibleBargaining' | translate }}">
+                              formControlName="applicationFlagIdList"
+                              placeholder="Признак">
                             </ng-select>
                           </div>
                         </div>
