--- a/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-view/claim-view.component.html
@@ -66,7 +66,9 @@
                   </div>
                   <div class="col-sm">
                     <label>Цена объекта (тг)</label>
-                    <div class="input-group">
+                    <input type="text" class="form-control" *ngIf="!claimViewDto.isSell"
+                           mask="separator" thousandSeparator=" " readonly [(ngModel)]="claimViewDto.objectPrice"/>
+                    <div class="input-group" *ngIf="claimViewDto.isSell">
                       <input type="text" class="form-control"
                              mask="separator" thousandSeparator=" " readonly/>
                       <input type="text" class="form-control"
@@ -88,12 +90,56 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-sm" *ngIf="!claimViewDto.isSell">
+                    <label>Обременение</label>
+                    <div class="row">
+                      <div class="col-sm text-center">
+                        <input type="radio" [value]="true" class="custom-control-input"
+                               [(ngModel)]="claimViewDto.encumbrance"/>
+                        <label class="custom-control-label">Да</label>
+                      </div>
+                      <div class="col-sm float-left">
+                        <input type="radio" [value]="false" class="custom-control-input"
+                               [(ngModel)]="claimViewDto.encumbrance"/>
+                        <label class="custom-control-label">Нет</label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm" *ngIf="!claimViewDto.isSell">
+                    <label>Общая дол. соб-ть</label>
+                    <div class="row">
+                      <div class="col-sm text-center">
+                        <input type="radio" [value]="true" class="custom-control-input"
+                               [(ngModel)]="claimViewDto.sharedOwnershipProperty"/>
+                        <label class="custom-control-label">Да</label>
+                      </div>
+                      <div class="col-sm float-left">
+                        <input type="radio" [value]="false" class="custom-control-input"
+                               [(ngModel)]="claimViewDto.sharedOwnershipProperty"/>
+                        <label class="custom-control-label">Нет</label>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm" *ngIf="!claimViewDto.isSell">
+                    <label>Обмен</label>
+                    <div class="row">
+                      <div class="col-sm text-center">
+                        <input type="radio" [value]="true" class="custom-control-input"
+                               [(ngModel)]="claimViewDto.exchange"/>
+                        <label class="custom-control-label">Да</label>
+                      </div>
+                      <div class="col-sm float-left">
+                        <input type="radio" [value]="false" class="custom-control-input"
+                               [(ngModel)]="claimViewDto.exchange"/>
+                        <label class="custom-control-label">Нет</label>
+                      </div>
+                    </div>
+                  </div>
                   <div class="col-sm">
                     <label>Признак</label>
                   </div>
                   <div class="col-sm">
                     <label>Вероятность торга</label>
-                    {{claimViewDto.probabilityOfBidding}}
                     <div class="row">
                       <div class="col-sm text-center">
                         <input type="radio" [value]="true" name="probabilityOfBidding"
@@ -111,14 +157,17 @@
                 <div class="row">
                   <div class="col-sm">
                     <label>Причины торга</label>
+                    <textarea class="col-sm-12 control" rows="2"
+                              [value]="setLoop(claimViewDto, 'possibleReasonForBiddingIdList')" readonly></textarea>
                   </div>
                   <div class="col-sm">
-                    <label>Размер торга</label>
-                    <input type="text" class="form-control" readonly [value]="applicationId"/>
+                    <label class="mb-4">Размер торга</label>
+                    <input type="text" class="form-control" readonly [(ngModel)]="claimViewDto.theSizeOfTrades"
+                           mask="separator.2" thousandSeparator=" "/>
                   </div>
                   <div class="col-sm">
                     <label>Комментарий</label>
-                    <textarea class="col-sm-12 control" rows="1" [value]="claimViewDto.comment" readonly></textarea>
+                    <textarea class="col-sm-12 control" rows="2" [value]="claimViewDto.comment" readonly></textarea>
                   </div>
                 </div>
               </div>
