--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1372,6 +1372,7 @@
                               </div>
                             </fieldset>
                           </div>
+
                           <div class="col-sm" *ngIf="photoPlanList.length > 0">
                             <fieldset class="scheduler-border col-sm">
                               <legend class="scheduler-border" translate>Планы<br/>
@@ -1431,6 +1432,16 @@
                               </div>
                             </fieldset>
                           </div>
+                        </div>
+                      </div>
+                      <div class="progress" *ngIf="isUpload">
+                        <div
+                          class="progress-bar"
+                          role="progressbar"
+                          [attr.aria-valuenow]="percent"
+                          aria-valuemin="0"
+                          aria-valuemax="100"
+                          [style.width.%]="percent">
                         </div>
                       </div>
                     </div>
