--- a/frontend/src/app/components/dic-control/dic-control.component.html
+++ b/frontend/src/app/components/dic-control/dic-control.component.html
@@ -17,16 +17,19 @@
 
 
         <div class="col-sm-10">
-          <div style="border: solid 1px black; padding: 5px; ">
-            <a *ngIf="adminRoles" (click)="openModal(template);editDic()"><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
-            <a *ngIf="adminRoles" style="margin-left: 10px" (click)="openModal(template);addDic()"><i style="color:green"
-                                                                                                      class="fa fa-plus-circle fa-2x"></i></a>
-            <a *ngIf="adminRoles" (click)="openModal(template2);deleteDic()" style="margin-left: 10px"><i style="color:red"
-                                                                                                          class="fa fa-times-circle fa-2x"></i></a>
+          <div *ngIf="showActions()"
+               style="border: solid 1px black; padding: 5px;">
+            <a *ngIf="adminRoles" (click)="openModal(template);editDic()">
+              <i style="color: blue" class="fa fa-edit fa-2x"></i>
+            </a>
+            <a *ngIf="adminRoles" style="margin-left: 10px" (click)="openModal(template);addDic()">
+              <i style="color:green" class="fa fa-plus-circle fa-2x"></i>
+            </a>
+            <a *ngIf="adminRoles" (click)="openModal(template2);deleteDic()" style="margin-left: 10px">
+              <i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
           </div>
 
-          <div style="border: solid 1px black; padding: 5px;
-     overflow: auto;">
+          <div style="border: solid 1px black; padding: 5px;overflow: auto;">
             <table *ngIf="resident" class="table table-bordered text-center">
               <thead class="text-center">
               <tr>
